# peach

./: CMakeLists.txt  README.md  index.md  simple.pch
cli/include/: PeachCli.hpp
cli/src/: Main.cpp
core/include/CommandLineInterface/: PeachCLI.hpp
core/include/Evaluation/: Expression.hpp  PeachType.hpp
core/include/Interpretation/: Indentator.hpp  Interpreter.hpp
core/include/Tokenization/: FsmCollection.hpp  Token.hpp  Transition.hpp
core/include/Tokenization/Finders/: LiteralFinder.hpp  NumberFinder.hpp
core/include/Tools/: Exception.hpp
include/: Exception.hpp  Expression.hpp  FiniteStateMachine.hpp  FsmCollection.hpp  Indentator.hpp  Interpreter.hpp  NameFinder.hpp  NumberFinder.hpp  OperatorFinder.hpp  SingleCharFinder.hpp  Token.hpp  Transition.hpp
include/Tokenization/: FsmCollection.hpp
include/Tokenization/Finders/: NameFinder.hpp
src/: main.cpp
